--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,6 @@
         }
     ],
     "clangd.arguments": [
-        "--compile-commands-dir=c:\\work\\Areas\\examples\\ci example\\CI_Example\\out\\Project\\avh\\debug"
+        "--compile-commands-dir=/workspaces/CI_Example/out/Project/avh/debug"
     ]
 }
