--- a/get_started.csolution.yml
+++ b/get_started.csolution.yml
@@ -1,6 +1,6 @@
 # A solution is a collection of related projects that share same base configuration.
 solution:
-  created-for: CMSIS-Toolbox@2.4.0
+  created-for: CMSIS-Toolbox@2.12.0
   cdefault:
   compiler: AC6
 
@@ -11,11 +11,15 @@ solution:
     - pack: Arm-Packs::Unity
 
   target-types:
-    - type: avh                               # runs on Arm Virtual Hardware
-      device: ARMCM3
-                                              # add more hardware targets (don't forget to add the required packs)
-                                              
-  build-types:                                # defines toolchain options for 'debug' and 'release'
+    - type: avh # runs on Arm Virtual Hardware
+      device: ARMCM3 # add more hardware targets (don't forget to add the required packs)
+      target-set:
+        - set:
+          images:
+            - project-context: Project.debug
+
+  build-types:
+    # defines toolchain options for 'debug' and 'release'
     - type: debug
       optimize: debug
       debug: on
@@ -23,7 +27,7 @@ solution:
     - type: release
       optimize: balanced
       debug: off
- 
+
   # List related projects.
   projects:
     - project: Project/Project.cproject.yml
